# Sunkar-SAT-backend

./: README.md  alembic.ini  deps.py  main.py  my-requests.http  pyproject.toml  requirements.txt  run_script.sh  test-email.py
api/api_v1/endpoints/: users.py
app/core/: config.py  security.py
crud/: __init__.py  crud_notification.py  crud_order.py  crud_order_unit.py  crud_price.py  crud_user.py
db/: base_class.py
migrations/: env.py
migrations/versions/: 077ce1ea3b71_merge_e4d_and_91e.py  1d878d5f81ac_create_new_table_order_units.py  29f2b9d64b4e_create_users_table.py  33f7f13cb844_create_notifications_table.py  4be91e848825_order_units.py  51489a893e46_migration_for_price.py  91eec3e9c68d_create_orders_table.py  dca9ddbe7cd0_add_source_delete_type.py  e4ddd2eefc4f_add_default_value_for_is_viewed.py
models/: __init__.py  notification.py  order.py  order_unit.py  price.py  user.py
schemas/: __init__.py  notification.py  order.py  order_unit.py  price.py  token.py  user.py
