[tool.poetry]
name = "sunkarsat-backend-v2"
version = "0.1.0"
description = ""
authors = ["Nurbolat Sansyzbay <nurbolatsnk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.20"
GeoAlchemy2 = "^0.9.1"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
bcrypt = "^3.2.0"
python-multipart = "^0.0.5"
geojson-pydantic = "^0.3.0"
geojson = "^2.5.0"
Shapely = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
